--- a/algorithm_study/cic_day5.ipynb
+++ b/algorithm_study/cic_day5.ipynb
@@ -332,6 +332,93 @@
     "\n",
     "# 최종적으로 NO인지 YES인지 확인"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 프로그래머스\n",
+    "## 같은 숫자는 싫어\n",
+    "\n",
+    "```\n",
+    "문제 설명\n",
+    "배열 arr가 주어집니다. 배열 arr의 각 원소는 숫자 0부터 9까지로 이루어져 있습니다. 이때, 배열 arr에서 연속적으로 나타나는 숫자는 하나만 남기고 전부 제거하려고 합니다. 단, 제거된 후 남은 수들을 반환할 때는 배열 arr의 원소들의 순서를 유지해야 합니다. 예를 들면,\n",
+    "\n",
+    "arr = [1, 1, 3, 3, 0, 1, 1] 이면 [1, 3, 0, 1] 을 return 합니다.\n",
+    "arr = [4, 4, 4, 3, 3] 이면 [4, 3] 을 return 합니다.\n",
+    "배열 arr에서 연속적으로 나타나는 숫자는 제거하고 남은 수들을 return 하는 solution 함수를 완성해 주세요.\n",
+    "\n",
+    "제한사항\n",
+    "배열 arr의 크기 : 1,000,000 이하의 자연수\n",
+    "배열 arr의 원소의 크기 : 0보다 크거나 같고 9보다 작거나 같은 정수\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 큐를 구현할 deque 객체 불러오기\n",
+    "from collections import deque\n",
+    "\n",
+    "def solution(arr):\n",
+    "    answer = []\n",
+    "    arr = deque(arr)\n",
+    "    \n",
+    "    # popleft() 메서드로 값을 앞에서 꺼냄\n",
+    "    number = arr.popleft() \n",
+    "    # 가장 맨 앞 값을 새로운 빈 리스트에 추가\n",
+    "    answer.append(number)\n",
+    "    \n",
+    "    # answer의 마지막 값과 arr의 맨 앞 값을 비교\n",
+    "    # arr에 원소가 없을 때 까지 비교\n",
+    "    \n",
+    "    while len(arr) !=0 :\n",
+    "        number = arr.popleft()\n",
+    "        \n",
+    "        if answer[-1] != number :\n",
+    "            answer.append(number)\n",
+    "            \n",
+    "    \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 0, 1]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution([1,1,3,3,0,1,1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 백준 11866\n",
+    "요세푸스문제 -> 덱 가정해서 풀기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
