--- a/algorithm_study/cic_day3.ipynb
+++ b/algorithm_study/cic_day3.ipynb
@@ -51,9 +51,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 3\n"
+     ]
+    }
+   ],
    "source": [
     "# 중첩 반복문\n",
     "# 이차원 리스트의 순회를 위한 이중 반복문\n",
@@ -63,8 +71,52 @@
     "    [4,5,6],\n",
     "    [7,8,9]\n",
     "]\n",
-    "\n"
+    "\n",
+    "# 두 번의 인덱싱 통해 원소에 접근\n",
+    "\n",
+    "number = matrix[0][0]\n",
+    "\n",
+    "# 세로 길이(n, N)와 가로 길이(m, M)\n",
+    "n = len(matrix)\n",
+    "m = len(matrix[0])\n",
+    "\n",
+    "print(n, m)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 인덱스 통한 순회\n",
+    "for y in range(n) :\n",
+    "    for x in range(m):\n",
+    "        print(matrix[y][x])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
