--- a/빅데이터분석기사/day1.ipynb
+++ b/빅데이터분석기사/day1.ipynb
@@ -1063,6 +1063,540 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import sklearn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('Bank_Personal_Loan_Modeling.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Experience</th>\n",
+       "      <th>Income</th>\n",
+       "      <th>ZIP Code</th>\n",
+       "      <th>Family</th>\n",
+       "      <th>CCAvg</th>\n",
+       "      <th>Education</th>\n",
+       "      <th>Mortgage</th>\n",
+       "      <th>Personal Loan</th>\n",
+       "      <th>Securities Account</th>\n",
+       "      <th>CD Account</th>\n",
+       "      <th>Online</th>\n",
+       "      <th>CreditCard</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>25</td>\n",
+       "      <td>1</td>\n",
+       "      <td>49</td>\n",
+       "      <td>91107</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>45</td>\n",
+       "      <td>19</td>\n",
+       "      <td>34</td>\n",
+       "      <td>90089</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>39</td>\n",
+       "      <td>15</td>\n",
+       "      <td>11</td>\n",
+       "      <td>94720</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>35</td>\n",
+       "      <td>9</td>\n",
+       "      <td>100</td>\n",
+       "      <td>94112</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>35</td>\n",
+       "      <td>8</td>\n",
+       "      <td>45</td>\n",
+       "      <td>91330</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ID  Age  Experience  Income  ZIP Code  Family  CCAvg  Education  Mortgage  \\\n",
+       "0   1   25           1      49     91107       4    1.6          1         0   \n",
+       "1   2   45          19      34     90089       3    1.5          1         0   \n",
+       "2   3   39          15      11     94720       1    1.0          1         0   \n",
+       "3   4   35           9     100     94112       1    2.7          2         0   \n",
+       "4   5   35           8      45     91330       4    1.0          2         0   \n",
+       "\n",
+       "   Personal Loan  Securities Account  CD Account  Online  CreditCard  \n",
+       "0              0                   1           0       0           0  \n",
+       "1              0                   1           0       0           0  \n",
+       "2              0                   0           0       0           0  \n",
+       "3              0                   0           0       0           0  \n",
+       "4              0                   0           0       0           1  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 5000 entries, 0 to 4999\n",
+      "Data columns (total 14 columns):\n",
+      " #   Column              Non-Null Count  Dtype  \n",
+      "---  ------              --------------  -----  \n",
+      " 0   ID                  5000 non-null   int64  \n",
+      " 1   Age                 5000 non-null   int64  \n",
+      " 2   Experience          5000 non-null   int64  \n",
+      " 3   Income              5000 non-null   int64  \n",
+      " 4   ZIP Code            5000 non-null   int64  \n",
+      " 5   Family              5000 non-null   int64  \n",
+      " 6   CCAvg               5000 non-null   float64\n",
+      " 7   Education           5000 non-null   int64  \n",
+      " 8   Mortgage            5000 non-null   int64  \n",
+      " 9   Personal Loan       5000 non-null   int64  \n",
+      " 10  Securities Account  5000 non-null   int64  \n",
+      " 11  CD Account          5000 non-null   int64  \n",
+      " 12  Online              5000 non-null   int64  \n",
+      " 13  CreditCard          5000 non-null   int64  \n",
+      "dtypes: float64(1), int64(13)\n",
+      "memory usage: 547.0 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5000, 14)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 결측치 제거\n",
+    "- 의미없는 변수 제거"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Experience</th>\n",
+       "      <th>Income</th>\n",
+       "      <th>Family</th>\n",
+       "      <th>CCAvg</th>\n",
+       "      <th>Education</th>\n",
+       "      <th>Mortgage</th>\n",
+       "      <th>Personal Loan</th>\n",
+       "      <th>Securities Account</th>\n",
+       "      <th>CD Account</th>\n",
+       "      <th>Online</th>\n",
+       "      <th>CreditCard</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>25</td>\n",
+       "      <td>1</td>\n",
+       "      <td>49</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>45</td>\n",
+       "      <td>19</td>\n",
+       "      <td>34</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>39</td>\n",
+       "      <td>15</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>35</td>\n",
+       "      <td>9</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>35</td>\n",
+       "      <td>8</td>\n",
+       "      <td>45</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Age  Experience  Income  Family  CCAvg  Education  Mortgage  Personal Loan  \\\n",
+       "0   25           1      49       4    1.6          1         0              0   \n",
+       "1   45          19      34       3    1.5          1         0              0   \n",
+       "2   39          15      11       1    1.0          1         0              0   \n",
+       "3   35           9     100       1    2.7          2         0              0   \n",
+       "4   35           8      45       4    1.0          2         0              0   \n",
+       "\n",
+       "   Securities Account  CD Account  Online  CreditCard  \n",
+       "0                   1           0       0           0  \n",
+       "1                   1           0       0           0  \n",
+       "2                   0           0       0           0  \n",
+       "3                   0           0       0           0  \n",
+       "4                   0           0       0           1  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ploan_processed = df.dropna().drop(['ID', 'ZIP Code'], axis=1, inplace = False)\n",
+    "ploan_processed.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 독립, 종속 변수 분리"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = ploan_processed.drop(['Personal Loan'], axis = 1)\n",
+    "y = ploan_processed['Personal Loan']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 전처리\n",
+    "    - train, test, valid 나누기 \n",
+    "    - 전처리"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3500, 11) (1500, 11) (3500,) (1500,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y, stratify=y,train_size = 0.7, test_size = 0.3, random_state=1234)\n",
+    "# stratify=y : 타겟 변수 y의 클래스 비율을 유지하며 데이터를 나눈다.\n",
+    "\n",
+    "print(X_train.shape, X_test.shape, y_train.shape, y_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sklearn.preprocessing as preprocessing\n",
+    "\n",
+    "preprocessor = preprocessing.Normalizer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = preprocessor.fit_transform(X_train)\n",
+    "X_test = preprocessor.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 모델 생성\n",
+    "\n",
+    "from sklearn import metrics\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "training_accuracy = []\n",
+    "test_accuracy = []\n",
+    "\n",
+    "# 1에서 25까지 n_neighbors를 적용 \n",
+    "neighbors_settings = range(1,25)\n",
+    "\n",
+    "# KNeighborsClassifier() 함수에 K개수 입력 -> 모델 만들고 데이터 적용 \n",
+    "for n_neighbors in neighbors_settings :\n",
+    "\n",
+    "    # 모델 생성\n",
+    "    clf = KNeighborsClassifier(n_neighbors=n_neighbors)\n",
+    "    clf.fit(X_train, y_train)\n",
+    "\n",
+    "    # 훈련 세트 정확도 저장\n",
+    "    training_accuracy.append(clf.score(X_train, y_train))\n",
+    "\n",
+    "    # 일반화 정확도 저장\n",
+    "    test_accuracy.append(clf.score(X_test, y_test))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.9213333333333333,\n",
+       " 0.9213333333333333,\n",
+       " 0.9246666666666666,\n",
+       " 0.92,\n",
+       " 0.926,\n",
+       " 0.916,\n",
+       " 0.9166666666666666,\n",
+       " 0.9173333333333333,\n",
+       " 0.9166666666666666,\n",
+       " 0.918,\n",
+       " 0.916,\n",
+       " 0.914,\n",
+       " 0.914,\n",
+       " 0.91,\n",
+       " 0.914,\n",
+       " 0.9093333333333333,\n",
+       " 0.91,\n",
+       " 0.908,\n",
+       " 0.908,\n",
+       " 0.9093333333333333,\n",
+       " 0.9093333333333333,\n",
+       " 0.9073333333333333,\n",
+       " 0.9073333333333333,\n",
+       " 0.9086666666666666]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
